completed all ex but not 09-06

--- a/exercises/09-the-dom/07-the-dom-washer/the-dom-washer-01/index.html
+++ b/exercises/09-the-dom/07-the-dom-washer/the-dom-washer-01/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Book List</title>
+  <title>The Dom Washer</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Book List">
+  <meta name="description" content="The Dom Washer">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
+
+  <!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   <!-- page content -->
-  <h1>My Book List</h1>
-  
+  <h1>07-the-dom-washer</h1>
+  <div id="dirty-stack" class="stack">
+    <h3>Dirty Stack</h3>
+    <div id="dirty"></div>
+</div>
+<div id="clean-stack" class="stack">
+    <h3>Clean Stack</h3>
+    <div id="clean"></div>
+</div>
   <!-- End of Body -->
   <!-- Javascript Code -->
+  
   <script src="./scripts/main.js"></script>
+  
+
+  
 </body>
 </html>
 
