completed 10-02-with keys up

--- a/exercises/10-events-and-listeners/02-calculate/index.html
+++ b/exercises/10-events-and-listeners/02-calculate/index.html
@@ -34,6 +34,7 @@
 
     <!-- End of Body -->
    <!-- Javascript files -->
-    <script src="./scripts/main.js"></script>
+    <!-- <script src="./scripts/main.js"></script> -->
+    <script src="./scripts/keys-solution.js"></script>
 </body>
 </html>
