--- a/exercises/10-events-and-listeners/03-catwalk/index.html
+++ b/exercises/10-events-and-listeners/03-catwalk/index.html
@@ -18,7 +18,8 @@
     <!-- End of Body -->
    <!-- Javascript files -->
     <!-- <script src="./scripts/variant-01.js"></script> -->
-    <script src="./scripts/variant-02.js"></script>
+    <!-- <script src="./scripts/variant-02.js"></script> -->
+    <script src="./scripts/variant-03.js"></script>
     
     
 </body>
