Completed all exercises and added documentation for the first two, catwalk only for the first two

--- a/exercises/10-events-and-listeners/01-story/index.html
+++ b/exercises/10-events-and-listeners/01-story/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="Story">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
@@ -11,8 +11,7 @@
   <!-- Linked Pico Css for pretty fomatting  -->
   <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
->
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 </head>
 <body>
       <!-- page content -->
