--- a/exercises/10-events-and-listeners/02-calculate/index.html
+++ b/exercises/10-events-and-listeners/02-calculate/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="Calculate">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
@@ -11,22 +11,21 @@
    <!-- Linked Pico Css for pretty fomatting  -->
    <link
    rel="stylesheet"
-   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
- >
+   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
 </head>
 <body>
     <!-- page content -->
   <label>Square this number:
-    <input type="number" id="square-input" size="2">
+    <input type="number" id="square-input">
   </label>
   <label>Half number:
-    <input type="number" id="half-input" size="2">
+    <input type="number" id="half-input">
   </label>
   <label>Percentage:
-    <input type="number" id="percentage-input" size="2">
+    <input type="number" id="percentage-input">
   </label>
   <label>Circle Area:
-    <input type="number" id="area-input" size="2">
+    <input type="number" id="area-input">
   </label>
   <button id="square-button">Calculate</button>
  <!--other inputs here -->
