--- a/exercises/10-events-and-listeners/03-catwalk/index.html
+++ b/exercises/10-events-and-listeners/03-catwalk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="Catwalk">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
@@ -12,14 +12,15 @@
 </head>
 <body>
     <!-- page content -->
-    <img style="position:absolute;" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
+    <img style="position:absolute;" alt="Catwalk" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
 
 
     <!-- End of Body -->
    <!-- Javascript files -->
     <!-- <script src="./scripts/variant-01.js"></script> -->
     <!-- <script src="./scripts/variant-02.js"></script> -->
-    <script src="./scripts/variant-4.js"></script>
+    <!-- <script src="./scripts/variant-03.js"></script> -->
+    <script src="./scripts/variant-04.js"></script>
     
     
 </body>
