--- a/exercises/10-events-and-listeners/04-enhanced-catwalk/index.html
+++ b/exercises/10-events-and-listeners/04-enhanced-catwalk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="description" content="Catwalk">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
