Added readme and jsdoc to the word guesser. still missing for the part of catwalk and arrivals.

--- a/exercises/10-events-and-listeners/06-enhanced-word-guesser/index.html
+++ b/exercises/10-events-and-listeners/06-enhanced-word-guesser/index.html
@@ -51,10 +51,7 @@
 </div>
 
 <div id="word-display"></div>
-  <!-- <p class="word" id="wordDisplay">_ _ _ _</p>
-  <p class="message" id="message"></p>
-  <div class="letters" id="letters"></div> -->
-<input type="text" id="input-letter" maxlength="1" required placeholder="Letter" />
+<input type="text" id="input-letter" maxlength="1" required placeholder="Letter">
 <button id="restart-btn">New Game</button>
 
 <div id="message"></div>
@@ -64,7 +61,7 @@
 </div>
   <!-- End of Body -->
   <!-- Javascript Code -->
-  <script src="scripts/main.js" defer></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
 
