--- a/exercises/10-events-and-listeners/03-catwalk/index.html
+++ b/exercises/10-events-and-listeners/03-catwalk/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <!-- page content -->
-    <img style="position:absolute;" alt="Catwalk" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
+    <!-- <img style="position:absolute;" alt="Catwalk" src="http://www.anniemation.com/clip_art/images/cat-walk.gif"> -->
+    <img style="position:absolute;" alt="Catwalk" src="./img/cat-walk.gif">
 
 
     <!-- End of Body -->
