--- a/exercises/10-events-and-listeners/04-enhanced-catwalk/index.html
+++ b/exercises/10-events-and-listeners/04-enhanced-catwalk/index.html
@@ -31,7 +31,7 @@
       <button id="slower">Slower</button>
       <button id="stop">Stop</button>
      </div>
-    <img style="position:absolute;" src="http://www.anniemation.com/clip_art/images/cat-walk.gif" alt="cat walk">
+    <img style="position:absolute;" src="./img/cat-walk.gif" alt="cat walk">
     <!-- End of Body -->
    <!-- Javascript files -->
     <script src="./scripts/main.js"></script>
