--- a/exercises/11-json-and-ajax/03-remote-factory/index.html
+++ b/exercises/11-json-and-ajax/03-remote-factory/index.html
@@ -8,17 +8,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
   <title>Car Factory</title>
+
   <!-- CSS files -->
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
       <!-- page content -->
-  <h1>Car Factory</h1>
-  <ul id="factoryDetails"></ul>
 
-  <h2>Cars</h2>
-  <ul id="carList"></ul>
-  <div id="errorMessage"></div>
+  <div class="container">
+    <h1>Car Factory</h1>
+    <ul id="factoryDetails"></ul>
+    <h2>Cars</h2>
+    <ul id="carList"></ul>
+    <div id="errorMessage"></div>
+  </div>
   <!-- End of Body -->
    <!-- Javascript files -->
    <script src="./scripts/main.js"></script>
