Started the unity 12

--- a/exercises/12-in-depth/01-soundwave/index.html
+++ b/exercises/12-in-depth/01-soundwave/index.html
@@ -7,23 +7,13 @@
   <meta name="author" content="Olga Kutuzova">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <title>Car Factory</title>
-
-  <!-- CSS files -->
-  <link
-  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-  <link rel="stylesheet" href="./css/styles.css">
+  <title>Soundwave</title>
+  
 </head>
 <body>
       <!-- page content -->
-
-  <div class="container">
-    <h1>Car Factory</h1>
-    <ul id="factoryDetails"></ul>
-    <h2>Cars</h2>
-    <ul id="carList"></ul>
-    <div id="errorMessage"></div>
-  </div>
+  <h1>Soundwave</h1>
+ <p>In this exercise the map method of the arrays in JS is tested. Please open the console to see the results.</p>
   <!-- End of Body -->
    <!-- Javascript files -->
    <script src="./scripts/main.js"></script>
