Unity 12, indexOf still missing in 6

--- a/exercises/12-in-depth/02-babies/index.html
+++ b/exercises/12-in-depth/02-babies/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Car Factory">
+  <meta name="description" content="Babies">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
