--- a/exercises/12-in-depth/06-reduce-all/scripts/foreach/index.html
+++ b/exercises/12-in-depth/06-reduce-all/scripts/foreach/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Soundwave">
+  <meta name="description" content="Reduce All">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <title>Soundwave</title>
+  <title>Reduce All forEach</title>
   
 </head>
 <body>
       <!-- page content -->
-  <h1>Soundwave</h1>
- <p>In this exercise the map method of the arrays in JS is tested. Please open the console to see the results.</p>
+  <h1>forEach</h1>
+ <p>In this exercise the custom forEach method is implemented. 
+  Please open the console to see the result.
+ </p>
   <!-- End of Body -->
    <!-- Javascript files -->
-   <!-- <script src="./scripts/main.js"></script> -->
-   <script src="./scripts/solution-02.js"></script>
+   <script src="main.js"></script>
+
 </body>
 </html>
