--- a/exercises/12-in-depth/03-baby-processing/index.html
+++ b/exercises/12-in-depth/03-baby-processing/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Car Factory">
+  <meta name="description" content="Baby Processing">
   <meta name="keywords" content="HTML, JavaScript">
   <meta name="author" content="Olga Kutuzova">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
-  <title>Babies</title>
+  <title>Baby Processing</title>
   
 </head>
 <body>
       <!-- page content -->
-  <h1>Babies</h1>
- <p>In this exercise the different ways to add elements to the array are tested.
+  <h1>Baby Processing</h1>
+ <p>In this exercise the favorite food and an outfit are logged to the console.
    Please open the console to see the results.</p>
   <!-- End of Body -->
    <!-- Javascript files -->
-   <script src="./scripts/solution-01.js"></script>
+   <script src="./scripts/main.js"></script>
 
 </body>
 </html>
